src/objects/LastTransactionDateLookup__c.object
<CustomObject>
    <description>This is a generic template for Custom Object. With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>lastTransactionDate__c</fullName>
        <label>lastTransactionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>objectAPIName__c</fullName>
        <label>objectAPIName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>objectPrefix__c</fullName>
        <label>objectPrefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>LastTransactionDateLookup</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LastTransactionDateLookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>